--- a/app/src/main/res/layout/crime_fragment.xml
+++ b/app/src/main/res/layout/crime_fragment.xml
@@ -14,6 +14,7 @@
         android:id="@+id/crime_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="text"
         android:hint="@string/crime_title_hint" />
 
     <TextView
@@ -32,5 +33,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/crime_solved_label"/>
+
 
 </LinearLayout>
