--- a/app/src/main/res/layout/crime_fragment.xml
+++ b/app/src/main/res/layout/crime_fragment.xml
@@ -69,7 +69,8 @@
     <Button
         android:id="@+id/crime_date"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/choose_date_button_description"/>
 
     <CheckBox
         android:id="@+id/crime_solved"
@@ -81,12 +82,14 @@
         android:id="@+id/crime_suspect"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/crime_suspect_text"/>
+        android:text="@string/crime_suspect_text"
+        android:contentDescription="@string/choose_suspect_button_description"
+        />
 
     <Button
         android:id="@+id/crime_report"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/crime_report_text"/>
+        android:text="@string/crime_report_text" />
 
 </LinearLayout>
